# xmtp_plugin

./: .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  START_HERE.md  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset  package_graph.json
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: history_sync_test.dart
example/lib/: main.dart
example/windows/runner/: Runner.rc
ios/: xmtp_plugin.podspec
ios/Classes/: XmtpPlugin.swift
ios/Tests/: XmtpPluginTests.swift
lib/: codecs.dart  xmtp_plugin.dart  xmtp_plugin_method_channel.dart  xmtp_plugin_platform_interface.dart  xmtp_plugin_web.dart  xmtp_plugin_windows.dart  xmtp_plugin_windows_stub.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: client.dart  consent.dart  conversations.dart  groups.dart  inbox.dart  messaging.dart  signing.dart
linux/: CMakeLists.txt  xmtp_plugin_plugin.cc  xmtp_plugin_plugin_private.h
linux/include/xmtp_plugin/: xmtp_plugin_plugin.h
linux/test/: xmtp_plugin_plugin_test.cc
macos/: xmtp_plugin.podspec
macos/Classes/: XmtpPlugin.swift
proto/content_types/: delete_message.proto  leave_request.proto  multi_remote_attachment.proto
rust/: Cargo.toml  build.ps1
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: client.rs  consent.rs  conversations.rs  groups.rs  helpers.rs  inbox.rs  messaging.rs  mod.rs  signing.rs
test/: xmtp_plugin_web_test.dart
test_app/: README.md  pubspec.yaml
test_app/android/app/: build.gradle.kts
test_app/lib/: log_file.dart  log_file_io.dart  main.dart
test_app/test/: widget_test.dart
test_app/web/: index.html  manifest.json
test_app/windows/: CMakeLists.txt
test_app/windows/runner/: Runner.rc  main.cpp
web/: README.md  example.html  index.html  package.json  vite.config.js  xmtp_client_manager.js
windows/: CMakeLists.txt  xmtp_plugin_plugin.cpp  xmtp_plugin_plugin.h  xmtp_plugin_plugin_c_api.cpp
windows/include/xmtp_plugin/: xmtp_plugin_plugin_c_api.h
windows/test/: xmtp_plugin_plugin_test.cpp
(+5 files in other folders)
