[package]
name = "xmtp_plugin_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Flutter Rust Bridge
flutter_rust_bridge = "=2.11.1"

# Core XMTP crates (pinned to v1.9.0)
xmtp_mls = { git = "https://github.com/xmtp/libxmtp", tag = "v1.9.0" }
xmtp_id = { git = "https://github.com/xmtp/libxmtp", tag = "v1.9.0" }
xmtp_db = { git = "https://github.com/xmtp/libxmtp", tag = "v1.9.0" }
xmtp_api_d14n = { git = "https://github.com/xmtp/libxmtp", tag = "v1.9.0" }
xmtp_api_grpc = { git = "https://github.com/xmtp/libxmtp", tag = "v1.9.0" }
xmtp_api = { git = "https://github.com/xmtp/libxmtp", tag = "v1.9.0" }
xmtp_content_types = { git = "https://github.com/xmtp/libxmtp", tag = "v1.9.0" }
xmtp_proto = { git = "https://github.com/xmtp/libxmtp", tag = "v1.9.0" }

# HTTP client (for remote attachment download)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

# Error handling
anyhow = "1"

# Crypto (key generation + Ethereum address derivation)
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
rand = "0.8"
hex = "0.4"

# Streams
futures = "0.3"

# Logging
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
serde_json = "1"
prost = "0.14"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
xmtp_common = { git = "https://github.com/xmtp/libxmtp", tag = "v1.9.0" }

[patch.crates-io]
diesel = { git = "https://github.com/ephemerahq/diesel", branch = "coda/copy-to-sqlite" }
diesel_migrations = { git = "https://github.com/ephemerahq/diesel", branch = "coda/copy-to-sqlite" }

# Pin hpke-rs to v0.4.0 (openmls_libcrux_crypto requires ^0.4.0, latest on default branch is 0.5.x)
[patch."https://github.com/cryspen/hpke-rs"]
hpke-rs = { path = "deps/hpke-rs" }
hpke-rs-crypto = { path = "deps/hpke-rs/traits" }
hpke-rs-libcrux = { path = "deps/hpke-rs/libcrux_provider" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
